@@ -2,229 +2,142 @@ package com.employeemgmt.models;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.time.Period;
-import java.util.Objects;
 
 /**
  * Employee model class
- * Matches the enhanced database schema with normalized fields
+ * Matches real MySQL schema:
+ *
+ * employees(
+ *   empid INT,
+ *   Fname VARCHAR,
+ *   Lname VARCHAR,
+ *   email VARCHAR,
+ *   HireDate DATE,
+ *   Salary DECIMAL,
+ *   SSN VARCHAR
+ * )
  */
 public class Employee implements Comparable<Employee> {
-    
-    // Core employee fields (from employees table)
+
+    // Core DB fields
     private int empid;
     private String firstName;
     private String lastName;
     private String ssn;
-    private LocalDate dob;
     private String email;
     private LocalDate hireDate;
     private BigDecimal baseSalary;
-    private boolean active;
-    
-    // Address fields (from address table)
+
+    // Optional fields (not in DB)
+    private LocalDate dob;
+    private boolean active = true;
+
     private String street;
-    private int cityId;
+    private Integer cityId;  // must be Integer (nullable)
     private String zip;
     private String gender;
     private String identifiedRace;
     private String mobilePhone;
-    
-    // Related entity fields (for display purposes)
+
     private String cityName;
     private String stateName;
     private String divisionName;
     private String jobTitle;
-    
-    // Default constructor
-    public Employee() {
-        this.active = true; // Default to active
-    }
-    
-    // Constructor with core fields
-    public Employee(String firstName, String lastName, String ssn, LocalDate dob, 
-                   String email, LocalDate hireDate, BigDecimal baseSalary) {
-        this();
-        this.firstName = firstName;
-        this.lastName = lastName;
-        this.ssn = ssn;
-        this.dob = dob;
-        this.email = email;
-        this.hireDate = hireDate;
-        this.baseSalary = baseSalary;
-    }
-    
-    // Full constructor
-    public Employee(int empid, String firstName, String lastName, String ssn, LocalDate dob,
-                   String email, LocalDate hireDate, BigDecimal baseSalary, boolean active,
-                   String street, int cityId, String zip, String gender, 
-                   String identifiedRace, String mobilePhone) {
+
+    public Employee() {}
+
+    // Minimal constructor matching DB schema
+    public Employee(int empid, String firstName, String lastName,
+                    String email, LocalDate hireDate,
+                    BigDecimal baseSalary, String ssn) {
+
         this.empid = empid;
         this.firstName = firstName;
         this.lastName = lastName;
-        this.ssn = ssn;
-        this.dob = dob;
         this.email = email;
         this.hireDate = hireDate;
         this.baseSalary = baseSalary;
-        this.active = active;
-        this.street = street;
-        this.cityId = cityId;
-        this.zip = zip;
-        this.gender = gender;
-        this.identifiedRace = identifiedRace;
-        this.mobilePhone = mobilePhone;
+        this.ssn = ssn;
     }
-    
-    // Getters and Setters
+
+    // Getters/Setters
     public int getEmpid() { return empid; }
     public void setEmpid(int empid) { this.empid = empid; }
-    
+
     public String getFirstName() { return firstName; }
-    public void setFirstName(String firstName) { 
-        if (firstName == null || firstName.trim().isEmpty()) {
-            throw new IllegalArgumentException("First name cannot be null or empty");
-        }
-        this.firstName = firstName.trim(); 
-    }
-    
+    public void setFirstName(String firstName) { this.firstName = firstName; }
+
     public String getLastName() { return lastName; }
-    public void setLastName(String lastName) { 
-        if (lastName == null || lastName.trim().isEmpty()) {
-            throw new IllegalArgumentException("Last name cannot be null or empty");
-        }
-        this.lastName = lastName.trim(); 
-    }
-    
+    public void setLastName(String lastName) { this.lastName = lastName; }
+
     public String getSsn() { return ssn; }
-    public void setSsn(String ssn) { 
-        if (ssn != null && !ssn.matches("\\d{3}-\\d{2}-\\d{4}")) {
-            throw new IllegalArgumentException("SSN must be in format XXX-XX-XXXX");
-        }
-        this.ssn = ssn; 
-    }
-    
-    public LocalDate getDob() { return dob; }
-    public void setDob(LocalDate dob) { 
-        if (dob != null && dob.isAfter(LocalDate.now())) {
-            throw new IllegalArgumentException("Date of birth cannot be in the future");
-        }
-        this.dob = dob; 
-    }
-    
+    public void setSsn(String ssn) { this.ssn = ssn; }
+
     public String getEmail() { return email; }
-    public void setEmail(String email) { 
-        if (email != null && !email.matches("^[A-Za-z0-9+_.-]+@(.+)$")) {
-            throw new IllegalArgumentException("Invalid email format");
-        }
-        this.email = email; 
-    }
-    
+    public void setEmail(String email) { this.email = email; }
+
     public LocalDate getHireDate() { return hireDate; }
     public void setHireDate(LocalDate hireDate) { this.hireDate = hireDate; }
-    
+
     public BigDecimal getBaseSalary() { return baseSalary; }
-    public void setBaseSalary(BigDecimal baseSalary) { 
-        if (baseSalary != null && baseSalary.compareTo(BigDecimal.ZERO) < 0) {
-            throw new IllegalArgumentException("Salary cannot be negative");
-        }
-        this.baseSalary = baseSalary; 
-    }
-    
+    public void setBaseSalary(BigDecimal baseSalary) { this.baseSalary = baseSalary; }
+
+    public LocalDate getDob() { return dob; }
+    public void setDob(LocalDate dob) { this.dob = dob; }
+
     public boolean isActive() { return active; }
     public void setActive(boolean active) { this.active = active; }
-    
+
     public String getStreet() { return street; }
     public void setStreet(String street) { this.street = street; }
-    
-    public int getCityId() { return cityId; }
-    public void setCityId(int cityId) { this.cityId = cityId; }
-    
+
+    public Integer getCityId() { return cityId; }
+    public void setCityId(Integer cityId) { this.cityId = cityId; }
+
     public String getZip() { return zip; }
     public void setZip(String zip) { this.zip = zip; }
-    
+
     public String getGender() { return gender; }
     public void setGender(String gender) { this.gender = gender; }
-    
+
     public String getIdentifiedRace() { return identifiedRace; }
     public void setIdentifiedRace(String identifiedRace) { this.identifiedRace = identifiedRace; }
-    
+
     public String getMobilePhone() { return mobilePhone; }
     public void setMobilePhone(String mobilePhone) { this.mobilePhone = mobilePhone; }
-    
-    // Display fields (read-only)
+
     public String getCityName() { return cityName; }
     public void setCityName(String cityName) { this.cityName = cityName; }
-    
+
     public String getStateName() { return stateName; }
     public void setStateName(String stateName) { this.stateName = stateName; }
-    
+
     public String getDivisionName() { return divisionName; }
     public void setDivisionName(String divisionName) { this.divisionName = divisionName; }
-    
+
     public String getJobTitle() { return jobTitle; }
     public void setJobTitle(String jobTitle) { this.jobTitle = jobTitle; }
-    
-    // Business logic methods
-    public String getFullName() {
-        return firstName + " " + lastName;
-    }
-    
-    public int getAge() {
-        if (dob == null) return 0;
-        return Period.between(dob, LocalDate.now()).getYears();
-    }
-    
-    public int getYearsOfService() {
-        if (hireDate == null) return 0;
-        return Period.between(hireDate, LocalDate.now()).getYears();
-    }
-    
+
+    // Business logic (optional)
+    public String getFullName() { return firstName + " " + lastName; }
+
     public String getFormattedSalary() {
-        if (baseSalary == null) return "$0.00";
-        return String.format("$%,.2f", baseSalary);
+        return baseSalary != null ? String.format("$%,.2f", baseSalary) : "$0.00";
     }
-    
-    // Validation method
+
+    // Validation ONLY checks the actual DB columns
     public boolean isValid() {
-        return firstName != null && !firstName.trim().isEmpty() &&
-               lastName != null && !lastName.trim().isEmpty() &&
-               email != null && !email.trim().isEmpty() &&
-               ssn != null && ssn.matches("\\d{3}-\\d{2}-\\d{4}") &&
-               dob != null && hireDate != null &&
-               baseSalary != null && baseSalary.compareTo(BigDecimal.ZERO) >= 0;
+        return firstName != null && !firstName.isBlank() &&
+               lastName != null && !lastName.isBlank() &&
+               email != null && !email.isBlank() &&
+               ssn != null &&
+               hireDate != null &&
+               baseSalary != null;
     }
-    
-    // Comparable implementation (sort by last name, then first name)
+
     @Override
-    public int compareTo(Employee other) {
-        if (other == null) return 1;
-        
-        int lastNameComparison = this.lastName.compareToIgnoreCase(other.lastName);
-        if (lastNameComparison != 0) {
-            return lastNameComparison;
-        }
-        return this.firstName.compareToIgnoreCase(other.firstName);
-    }
-    
-    // Object methods
-    @Override
-    public boolean equals(Object obj) {
-        if (this == obj) return true;
-        if (obj == null || getClass() != obj.getClass()) return false;
-        
-        Employee employee = (Employee) obj;
-        return empid == employee.empid && Objects.equals(ssn, employee.ssn);
-    }
-    
-    @Override
-    public int hashCode() {
-        return Objects.hash(empid, ssn);
-    }
-    
-    @Override
-    public String toString() {
-        return String.format("Employee{empid=%d, name='%s %s', email='%s', salary=%s, active=%s}",
-                empid, firstName, lastName, email, getFormattedSalary(), active);
+    public int compareTo(Employee o) {
+        int cmp = this.lastName.compareToIgnoreCase(o.lastName);
+        return (cmp != 0) ? cmp : this.firstName.compareToIgnoreCase(o.firstName);
     }
 }
